--- a/templates/select.html
+++ b/templates/select.html
@@ -31,7 +31,7 @@
                     <div class="column" >
                         <div class="form-check form-check-inline"> 
                             <select name="select_model" id="selected_model">
-                                <option value='Model1' >Model 1 Sequintial </option>
+                                <option value='Model1' >Model 1 Pretrained VGG16 </option>
                                 <option value='Model2'   >Model 2 Sequintial  </option>
                             </select>
                         </div>   
